Castomers section create

--- a/index.html
+++ b/index.html
@@ -169,6 +169,31 @@
           </ul>
         </div>
       </section>
+      <section class="castomers-section">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul ul class="list castomers-card-set">
+            <li class="castomers-item">
+              <img src="./images/Logo1.svg" alt="logo1" />
+            </li>
+            <li class="castomers-item">
+              <img src="./images/Logo2.svg" alt="logo2" />
+            </li>
+            <li class="castomers-item">
+              <img src="./images/Logo3.svg" alt="logo3" />
+            </li>
+            <li class="castomers-item">
+              <img src="./images/Logo4.svg" alt="logo4" />
+            </li>
+            <li class="castomers-item">
+              <img src="./images/Logo5.svg" alt="logo5" />
+            </li>
+            <li class="castomers-item">
+              <img src="./images/Logo6.svg" alt="logo6" />
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer-style">
       <div class="container">
