Creating castomer icons

--- a/index.html
+++ b/index.html
@@ -174,22 +174,45 @@
           <h2 class="section-title">Customers</h2>
           <ul ul class="list castomers-card-set">
             <li class="castomers-item">
-              <img src="./images/Logo1.svg" alt="logo1" />
+              <a href=""
+                ><svg class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use></svg
+              ></a>
             </li>
             <li class="castomers-item">
-              <img src="./images/Logo2.svg" alt="logo2" />
+              <a href=""
+                ><svg
+                  class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo2"></use>
+              <svg/></a>
             </li>
             <li class="castomers-item">
-              <img src="./images/Logo3.svg" alt="logo3" />
+              <a href=""
+                ><svg
+                  class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use>
+              <svg/></a>
             </li>
             <li class="castomers-item">
-              <img src="./images/Logo4.svg" alt="logo4" />
+              <a href=""
+                ><svg
+                  class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use>
+              <svg/></a>
             </li>
             <li class="castomers-item">
-              <img src="./images/Logo5.svg" alt="logo5" />
+              <a href=""
+                ><svg
+                  class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use>
+              <svg/></a>
             </li>
             <li class="castomers-item">
-              <img src="./images/Logo6.svg" alt="logo6" />
+              <a href=""
+                ><svg
+                  class="castomers-box">
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use>
+              <svg/></a>
             </li>
           </ul>
         </div>
