Create advantage icons

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
           <h2 class="section-title visually-hidden">#</h2>
           <ul class="list advantage-card-set">
             <li class="advantage-item">
+              <svg class="advantage-box" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna1"></use></svg>
               <h3 class="advantage-box-title">Strategy</h3>
               <p class="advantage-box-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +77,8 @@
               </p>
             </li>
             <li class="advantage-item">
+              <svg class="advantage-box" width="64" height="64">
+                  <use class="advantage-icon" href="./images/symbol-defs.svg#icon-clock1"></use></svg>
               <h3 class="advantage-box-title">Punctuality</h3>
               <p class="advantage-box-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +86,8 @@
               </p>
             </li>
             <li class="advantage-item">
+              <svg class="advantage-box" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram1"></use></svg>
               <h3 class="advantage-box-title">Diligence</h3>
               <p class="advantage-box-text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +95,8 @@
               </p>
             </li>
             <li class="advantage-item">
+              <svg class="advantage-box" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut1"></use></svg>
               <h3 class="advantage-box-title">Technologies</h3>
               <p class="advantage-box-text">
                 Design practice focused on digital experiences. We bring forth a
