Fixing advantage icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="list menu-style">
             <li>
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link link line" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -68,7 +68,7 @@
           <h2 class="section-title visually-hidden">#</h2>
           <ul class="list advantage-card-set">
             <li class="advantage-item">
-              <svg class="advantage-box" width="64" height="64">
+              <svg class="advantage-box"  width="264" height="112">
                   <use href="./images/symbol-defs.svg#icon-antenna1"></use></svg>
               <h3 class="advantage-box-title">Strategy</h3>
               <p class="advantage-box-text">
@@ -77,8 +77,8 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="64" height="64">
-                  <use class="advantage-icon" href="./images/symbol-defs.svg#icon-clock1"></use></svg>
+              <svg class="advantage-box" width="264" height="112">
+                  <use href="./images/symbol-defs.svg#icon-clock1"></use></svg>
               <h3 class="advantage-box-title">Punctuality</h3>
               <p class="advantage-box-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,7 +86,7 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="64" height="64">
+              <svg class="advantage-box" width="264" height="112">
                   <use href="./images/symbol-defs.svg#icon-diagram1"></use></svg>
               <h3 class="advantage-box-title">Diligence</h3>
               <p class="advantage-box-text">
@@ -95,7 +95,7 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="64" height="64">
+              <svg class="advantage-box" width="264" height="112">
                   <use href="./images/symbol-defs.svg#icon-astronaut1"></use></svg>
               <h3 class="advantage-box-title">Technologies</h3>
               <p class="advantage-box-text">
