Creating team social icons

--- a/index.html
+++ b/index.html
@@ -133,10 +133,41 @@
                 width="264"
                 height="260"
               />
+              
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
-              </div>
+              <ul class="list team-social-set">
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
             </li>
             <li class="team-card-style team-card-item">
               <img
@@ -148,6 +179,36 @@
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="list team-social-set">
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
               </div>
             </li>
             <li class="team-card-style team-card-item">
@@ -160,6 +221,36 @@
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="list team-social-set">
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
               </div>
             </li>
             <li class="team-card-style team-card-item">
@@ -172,6 +263,36 @@
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="list team-social-set">
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="team-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
               </div>
             </li>
           </ul>
