--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
                 src="./images/team_card1.jpg"
                 alt="Mark Guerrero"
                 width="264"
-                height="260"
-              />
-              
+                />
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -174,8 +172,7 @@
                 src="./images/team_card2.jpg"
                 alt="Tom Ford"
                 width="264"
-                height="260"
-              />
+                         />
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -216,8 +213,7 @@
                 src="./images/team_card3.jpg"
                 alt="Camila Garcia"
                 width="264"
-                height="260"
-              />
+                            />
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -258,8 +254,7 @@
                 src="./images/team_card4.jpg"
                 alt="Daniel Wilson"
                 width="264"
-                height="260"
-              />
+                              />
               <div class="team-card-subtitle">
                 <h3 class="team-card-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
@@ -348,7 +343,8 @@
       </section>
     </main>
     <footer class="footer-style">
-      <div class="container">
+      <div class="container footer-container">
+      <div>
         <a class="logo-font logo-footer link" href="./index.html"
           >Web<span class="logo-right-invert">Studio</span></a
         >
@@ -356,7 +352,42 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+
       </div>
+      <div>
+        <p class="social-media-text">Social media</p>
+        <ul class="list footer-social-set">
+                <li>
+                  <a href="#">
+                    <svg class="footer-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-instagram2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="footer-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-twitter2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="footer-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-facebook2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg class="footer-social-item" width="40" height="40">
+                      <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+      </div>
+    </div>
     </footer>
   </body>
 </html>
