--- a/portfolio.html
+++ b/portfolio.html
@@ -207,14 +207,49 @@
       </section>
     </main>
     <footer class="footer-style">
-      <div class="container">
-        <a class="logo-font logo-footer link" href="./index.html"
-          >Web<span class="logo-right-invert">Studio</span></a
-        >
-        <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="logo-font logo-footer link" href="./index.html"
+            >Web<span class="logo-right-invert">Studio</span></a
+          >
+          <p class="footer-paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="social-media-text">Social media</p>
+          <ul class="list footer-social-set">
+            <li>
+              <a href="#">
+                <svg class="footer-social-item" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="footer-social-item" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-twitter2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="footer-social-item" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-facebook2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="footer-social-item" width="40" height="40">
+                  <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
