--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <section class="castomers-section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <ul ul class="list castomers-card-set">
+          <ul class="list castomers-card-set">
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
