--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link line" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a class="header-link link" href="">Contacts</a>
