--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <ul class="list advantage-card-set">
             <li class="advantage-item">
               <svg class="advantage-box" width="264" height="112">
-                <use href="./images/symbol-defs.svg#icon-antenna1"></use>
+                <use href="./images/icons.svg#icon-antenna1"></use>
               </svg>
               <h3 class="advantage-box-title">Strategy</h3>
               <p class="advantage-box-text">
@@ -81,7 +81,7 @@
             </li>
             <li class="advantage-item">
               <svg class="advantage-box" width="264" height="112">
-                <use href="./images/symbol-defs.svg#icon-clock1"></use>
+                <use href="./images/icons.svg#icon-clock1"></use>
               </svg>
               <h3 class="advantage-box-title">Punctuality</h3>
               <p class="advantage-box-text">
@@ -91,7 +91,7 @@
             </li>
             <li class="advantage-item">
               <svg class="advantage-box" width="264" height="112">
-                <use href="./images/symbol-defs.svg#icon-diagram1"></use>
+                <use href="./images/icons.svg#icon-diagram1"></use>
               </svg>
               <h3 class="advantage-box-title">Diligence</h3>
               <p class="advantage-box-text">
@@ -101,7 +101,7 @@
             </li>
             <li class="advantage-item">
               <svg class="advantage-box" width="264" height="112">
-                <use href="./images/symbol-defs.svg#icon-astronaut1"></use>
+                <use href="./images/icons.svg#icon-astronaut1"></use>
               </svg>
               <h3 class="advantage-box-title">Technologies</h3>
               <p class="advantage-box-text">
@@ -145,36 +145,28 @@
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,36 +182,28 @@
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,36 +223,28 @@
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -288,36 +264,28 @@
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="#">
                       <svg class="team-social-item" width="40" height="40">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -334,37 +302,37 @@
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo1"></use></svg
+                  <use href="./images/icons.svg#icon-logo1"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo2"></use></svg
+                  <use href="./images/icons.svg#icon-logo2"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo3"></use></svg
+                  <use href="./images/icons.svg#icon-logo3"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo4"></use></svg
+                  <use href="./images/icons.svg#icon-logo4"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo5"></use></svg
+                  <use href="./images/icons.svg#icon-logo5"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
               <a href=""
                 ><svg class="castomers-box">
-                  <use href="./images/symbol-defs.svg#icon-logo6"></use></svg
+                  <use href="./images/icons.svg#icon-logo6"></use></svg
               ></a>
             </li>
           </ul>
@@ -388,28 +356,28 @@
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-instagram2"></use>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-twitter2"></use>
+                  <use href="./images/icons.svg#icon-twitter2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-facebook2"></use>
+                  <use href="./images/icons.svg#icon-facebook2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
             </li>
