--- a/portfolio.html
+++ b/portfolio.html
@@ -225,28 +225,28 @@
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-instagram2"></use>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-twitter2"></use>
+                  <use href="./images/icons.svg#icon-twitter2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-facebook2"></use>
+                  <use href="./images/icons.svg#icon-facebook2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
             </li>
