Fixing second section

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
           <h2 class="section-title visually-hidden">#</h2>
           <ul class="list advantage-card-set">
             <li class="advantage-item">
-              <svg class="advantage-box" width="264" height="112">
-                <use href="./images/icons.svg#icon-antenna1"></use>
-              </svg>
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-box-title">Strategy</h3>
               <p class="advantage-box-text">
                 Our goal is to identify the business problem to walk away with
@@ -80,9 +82,11 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="264" height="112">
-                <use href="./images/icons.svg#icon-clock1"></use>
-              </svg>
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-box-title">Punctuality</h3>
               <p class="advantage-box-text">
                 Bring the key message to the brand's audience for the best price
@@ -90,9 +94,11 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="264" height="112">
-                <use href="./images/icons.svg#icon-diagram1"></use>
-              </svg>
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-box-title">Diligence</h3>
               <p class="advantage-box-text">
                 Research and confirm brands that present the strongest digital
@@ -100,9 +106,11 @@
               </p>
             </li>
             <li class="advantage-item">
-              <svg class="advantage-box" width="264" height="112">
-                <use href="./images/icons.svg#icon-astronaut1"></use>
-              </svg>
+              <div class="advantage-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
+                </svg>
+              </div>
               <h3 class="advantage-box-title">Technologies</h3>
               <p class="advantage-box-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -341,7 +349,7 @@
     </main>
     <footer class="footer-style">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-container">
           <a class="logo-font logo-footer link" href="./index.html"
             >Web<span class="logo-right-invert">Studio</span></a
           >
