--- a/index.html
+++ b/index.html
@@ -150,31 +150,31 @@
                 <h3 class="team-card-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
                 <ul class="list team-social-set">
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-instagram1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twitter1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-facebook1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -187,31 +187,31 @@
                 <h3 class="team-card-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
                 <ul class="list team-social-set">
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-instagram1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svgss=>
+                    </a>
+                  </li>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twitter1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-facebook1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -228,31 +228,31 @@
                 <h3 class="team-card-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
                 <ul class="list team-social-set">
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-instagram1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twitter1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-facebook1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -269,31 +269,31 @@
                 <h3 class="team-card-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
                 <ul class="list team-social-set">
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-instagram1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twitter1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-facebook1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <svg class="team-social-item" width="40" height="40">
-                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                  <li class="team-socials">
+                    <a class="team-social-icon" href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -361,31 +361,31 @@
         <div>
           <p class="social-media-text">Social media</p>
           <ul class="list footer-social-set">
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svgclass=>
+              </a>
+            </li>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook2"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
