--- a/index.html
+++ b/index.html
@@ -152,28 +152,28 @@
                 <ul class="list team-social-set">
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -189,28 +189,28 @@
                 <ul class="list team-social-set">
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                      </svgss=>
+                      </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -230,28 +230,28 @@
                 <ul class="list team-social-set">
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -271,28 +271,28 @@
                 <ul class="list team-social-set">
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials">
                     <a class="team-social-icon" href="#">
-                      <svg width="16" height="16">
+                      <svg class="social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -363,28 +363,28 @@
           <ul class="list footer-social-set">
             <li class="footer-socials">
               <a class="footer-social-icon" href="#">
-                <svg width="24" height="24">
+                <svg class="social-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svgclass=>
               </a>
             </li>
             <li class="footer-socials">
               <a class="footer-social-icon" href="#">
-                <svg width="24" height="24">
+                <svg class="social-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials">
               <a class="footer-social-icon" href="#">
-                <svg width="24" height="24">
+                <svg class="social-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials">
               <a class="footer-social-icon" href="#">
-                <svg width="24" height="24">
+                <svg class="social-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
