--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <a class="footer-social-icon" href="#">
                 <svg class="social-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
-                </svgclass=>
+                </svg>
               </a>
             </li>
             <li class="footer-socials">
