--- a/portfolio.html
+++ b/portfolio.html
@@ -210,7 +210,7 @@
     </main>
     <footer class="footer-style">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-container">
           <a class="logo-font logo-footer link" href="./index.html"
             >Web<span class="logo-right-invert">Studio</span></a
           >
@@ -222,31 +222,31 @@
         <div>
           <p class="social-media-text">Social media</p>
           <ul class="list footer-social-set">
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg class="social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg class="social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg class="social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
-                <svg class="footer-social-item" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin2"></use>
+            <li class="footer-socials">
+              <a class="footer-social-icon" href="#">
+                <svg class="social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
