--- a/index.html
+++ b/index.html
@@ -308,38 +308,38 @@
           <h2 class="section-title">Customers</h2>
           <ul class="list castomers-card-set">
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo1"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo2"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo3"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo4"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo5"></use></svg
               ></a>
             </li>
             <li class="castomers-item">
-              <a href=""
-                ><svg class="castomers-box">
+              <a class="castomer-link" href=""
+                ><svg class="castomers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo6"></use></svg
               ></a>
             </li>
