--- a/portfolio.html
+++ b/portfolio.html
@@ -88,12 +88,19 @@
           </ul>
           <ul class="list portfolio-card-set">
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <p class="portfolio-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
                   <p class="portfolio-text">App</p>
