--- a/portfolio.html
+++ b/portfolio.html
@@ -95,13 +95,12 @@
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
