--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     </footer>
     <div class="backdrop is-hidden modal-window" data-modal>
       <div class="modal">
-        <button data-modal-close class="modal-button">
+        <button data-modal-close class="modal-button" type="button">
           <svg width="8" height="8" class="modal-close">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
