--- a/index.html
+++ b/index.html
@@ -303,43 +303,43 @@
           </ul>
         </div>
       </section>
-      <section class="castomers-section">
+      <section class="customers-section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <ul class="list castomers-card-set">
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+          <ul class="list customers-card-set">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo1"></use></svg
               ></a>
             </li>
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo2"></use></svg
               ></a>
             </li>
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo3"></use></svg
               ></a>
             </li>
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo4"></use></svg
               ></a>
             </li>
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo5"></use></svg
               ></a>
             </li>
-            <li class="castomers-item">
-              <a class="castomer-link" href=""
-                ><svg class="castomers-box" width="104" height="56">
+            <li class="customers-item">
+              <a class="customer-link" href=""
+                ><svg class="customers-box" width="104" height="56">
                   <use href="./images/icons.svg#icon-logo6"></use></svg
               ></a>
             </li>
